@@ -1,85 +1,69 @@
 package org.developerkubilay.safra.p2p;
 
-import com.google.gson.JsonElement;
-import com.google.gson.JsonObject;
-import com.google.gson.JsonParser;
+import okhttp3.OkHttpClient;
+import okhttp3.Request;
+import okhttp3.Response;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.net.URI;
-import java.net.http.HttpClient;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
-import java.time.Duration;
+import java.util.concurrent.TimeUnit;
 
 public final class RemoteRendezvousBootstrap {
     private static final Logger LOGGER = LoggerFactory.getLogger(RemoteRendezvousBootstrap.class);
     private static final String REMOTE_CONFIG_URL = "https://raw.githubusercontent.com/DeveloperKubilay/Safra/refs/heads/assets/config.json";
-    private static final String DEFAULT_SITE_API_VERSION = "1.0";
-    private static final Duration CONNECT_TIMEOUT = Duration.ofSeconds(15);
-    private static final Duration REQUEST_TIMEOUT = Duration.ofSeconds(15);
-    private static final HttpClient HTTP_CLIENT = HttpClient.newBuilder()
-        .connectTimeout(CONNECT_TIMEOUT)
+    private static final String DEFAULT_SITE_API_VERSION = "3.0";
+    private static final OkHttpClient HTTP_CLIENT = new OkHttpClient.Builder()
+        .connectTimeout(15, TimeUnit.SECONDS)
+        .readTimeout(15, TimeUnit.SECONDS)
         .build();
 
     private RemoteRendezvousBootstrap() {
     }
 
     public static void initialize() {
-        if (P2pConstants.hasRendezvousUrl()) {
+        initializeDedicated();
+    }
+
+    public static void initializeDedicated() {
+        if (P2pConstants.hasExplicitRendezvousUrlOverride()) {
             return;
         }
 
         P2pConstants.applyDefaultRendezvousUrlIfAbsent();
 
         try {
-            HttpRequest request = HttpRequest.newBuilder(URI.create(REMOTE_CONFIG_URL))
-                .timeout(REQUEST_TIMEOUT)
-                .GET()
+            Request request = new Request.Builder()
+                .url(REMOTE_CONFIG_URL)
+                .get()
                 .build();
-            HttpResponse<String> response = HTTP_CLIENT.send(request, HttpResponse.BodyHandlers.ofString());
-            if (response.statusCode() < 200 || response.statusCode() >= 300) {
-                LOGGER.debug("Safra remote rendezvous config request returned HTTP {}", response.statusCode());
-                return;
-            }
 
-            String remoteUrl = parseRemoteUrl(response.body(), siteApiVersion());
-            if (!P2pConstants.isValidRendezvousUrl(remoteUrl)) {
-                LOGGER.debug("Safra remote rendezvous config did not contain a valid URL for api-{}", siteApiVersion());
-                return;
-            }
+            Response response = HTTP_CLIENT.newCall(request).execute();
+            try {
+                if (!response.isSuccessful()) {
+                    LOGGER.debug("Safra remote rendezvous config request returned HTTP {}", response.code());
+                    return;
+                }
 
-            P2pConstants.setRuntimeRendezvousUrl(remoteUrl);
+                String apiVersion = siteApiVersion();
+                String body = response.body() != null ? response.body().string() : "";
+                String remoteUrl = RemoteRendezvousConfigParser.parseRemoteUrl(body, apiVersion, "dedicated");
+                if (!P2pConstants.isValidRendezvousUrl(remoteUrl)) {
+                    LOGGER.debug("Safra remote rendezvous config did not contain a valid URL for api-{}", apiVersion);
+                    return;
+                }
+
+                P2pConstants.setRuntimeSiteApiVersion(apiVersion);
+                P2pConstants.setRuntimeRendezvousUrl(remoteUrl);
+            } finally {
+                response.close();
+            }
         } catch (Exception exception) {
             LOGGER.debug("Safra remote rendezvous bootstrap skipped: {}", exception.toString());
         }
     }
 
-    private static String parseRemoteUrl(String body, String siteApiVersion) {
-        if (body == null || body.isBlank()) {
-            return "";
-        }
-
-        JsonObject json = new JsonParser().parse(body).getAsJsonObject();
-        JsonElement urlElement = json.get("api-" + siteApiVersion);
-        if (urlElement == null || urlElement.isJsonNull()) {
-            return "";
-        }
-
-        return urlElement.getAsString();
-    }
-
     private static String siteApiVersion() {
-        String property = System.getProperty("safra.siteApiVersion");
-        if (property != null && !property.isBlank()) {
-            return property.trim();
-        }
-
-        String environment = System.getenv("SAFRA_SITE_API_VERSION");
-        if (environment != null && !environment.isBlank()) {
-            return environment.trim();
-        }
-
-        return DEFAULT_SITE_API_VERSION;
+        String resolved = P2pConstants.siteApiVersion();
+        return resolved == null || resolved.trim().isEmpty() ? DEFAULT_SITE_API_VERSION : resolved;
     }
 }
